bugfixing in process calling some refactor